@@ -32,6 +32,7 @@ public class VisionSensorNetwork {
             if( state.getBlock() == RedBits.VISION_SENSOR ) {
                 if (player.getPos().distanceTo(new Vec3d(pos.getX(), pos.getY(), pos.getZ())) < 130.0) {
                     if (((VisionSensorBlock) RedBits.VISION_SENSOR).activate(state, player.world, pos)) {
+                        player.incrementStat(RedBits.INTERACT_WITH_SIGHT_SENSOR);
                         return;
                     }
                 }
