@@ -29,6 +29,8 @@
     "block.redbits.warped_large_button": "Large Warped Button",
     "block.redbits.stone_large_button": "Large Stone Button",
     "block.redbits.polished_blackstone_large_button": "Large Polished Blackstone Button",
+    "stat.redbits.interact_with_sight_sensor": "Sight Sensors Triggered",
+    "stat.redbits.interact_with_redstone_emitter": "Redstone Emitters Adjusted",
     "message.redbits.power_level": "Power: %s"
 }
 
