@@ -29,6 +29,8 @@
     "block.redbits.warped_large_button": "Duży spaczony przycisk",
     "block.redbits.stone_large_button": "Duży kamienny przycisk",
     "block.redbits.polished_blackstone_large_button": "Duży wypolerowany czarnitowy przycisk",
+    "stat.redbits.interact_with_sight_sensor": "Wyzwolone czujnik wzroku",
+    "stat.redbits.interact_with_redstone_emitter": "Dostrojone emitery",
     "message.redbits.power_level": "Energia: %s"
 }
 
