@@ -1,0 +1,8 @@
+{
+    "values": [
+        "redbits:obsidian_pressure_plate",
+        "redbits:crying_obsidian_pressure_plate",
+        "redbits:end_stone_pressure_plate",
+        "redbits:basalt_pressure_plate"
+    ]
+}
