@@ -1,0 +1,7 @@
+{
+    "values": [
+        "#redbits:large_wooden_buttons",
+        "redbits:polished_blackstone_large_button",
+        "redbits:stone_large_button"
+    ]
+}
