@@ -1,0 +1,12 @@
+{
+    "values": [
+        "redbits:oak_large_button",
+        "redbits:spruce_large_button",
+        "redbits:birch_large_button",
+        "redbits:jungle_large_button",
+        "redbits:acacia_large_button",
+        "redbits:dark_oak_large_button",
+        "redbits:crimson_large_button",
+        "redbits:warped_large_button"
+    ]
+}
